cmake_minimum_required(VERSION 3.15)
project(leetcode)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(generate_parentheses)
add_subdirectory(container_with_most_water)
add_subdirectory(unique_paths)
add_subdirectory(unique_paths2)
add_subdirectory(binary_tree_pruning)
add_subdirectory(course_schedule)
add_subdirectory(course_schedule2)
add_subdirectory(knapsack)
